[metadata]
name = pyproj_template
version = attr:pyproj_template.VERSION
description = Python Project Template
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-2
author = Alt
author_email = alt.no.rock@gmail.com
classifiers =
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
package_dir =
    =src
packages = find:
install_requires = 

tests_require = 

[options.packages.find]
where = src

[options.entry_points]
console_scripts = pyproj_template = pyproj_template.util:main
