[metadata]
name = pokeca_city_notifier
version = attr:cityleague_notifier.VERSION
description = pokeca cityleague entry notifier
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-2
author = Alt
author_email = alt.no.rock@gmail.com
classifiers =
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
package_dir =
    =src
packages = find:
install_requires = 
    selenium
    line_message @ git+https://github.com//CodeSpaceTeam-Alt/LINE-notify.git@1.1.0#egg=line-message-1.1.0

tests_require = 

[options.packages.find]
where = src

[options.entry_points]
console_scripts = city_notifier = cityleague_notifier.util:main
